--- a/public/style/style.css
+++ b/public/style/style.css
@@ -34,7 +34,9 @@ body {
       text-align: center;
   }
   
-  
+  .main-article{
+    pointer-events: all;
+  }
   .heart {
       font-size: 150px;
       color: #e00;
@@ -125,15 +127,29 @@ body {
     /* background-color: #e00; */
    }
 
-   #menu{
+   #active-status{
     position: absolute;
     width: 100;
-    height: 100px;
-    right: 16px;
+    /* height: 100px; */
+    left:  16px;
     top:16px;
     pointer-events: painted;
     /* background-color: aliceblue; */
     color: #e00;
+   }
+   #menu{
+    position: absolute;
+    /* width: 100; */
+    /* height: 100px;  */
+    right: 16px;
+    top:16px;
+    pointer-events: painted;
+    /* background-color: aliceblue; */
+    /* color: #e00; */
+   }
+
+   button{
+    pointer-events: all;
    }
 
    
@@ -202,3 +218,19 @@ body {
     border-radius: 15px;
     height: 30px;
   }
+
+  input{
+    pointer-events: all;
+  }
+
+  button{
+    pointer-events: all;
+  }
+
+   #tic-tac-toe-game,#heart-beat, #guess-game, #weather-screen {
+    display: none;
+}
+
+.event {
+    display: block;
+}
